--- a/assets/css/gaia/_mixins.scss
+++ b/assets/css/gaia/_mixins.scss
@@ -1,11 +1,11 @@
 //Utilities 
 
-@import "mixins/transparency";
-@import "mixins/vendor-prefixes";
+@use "mixins/transparency";
+@use "mixins/vendor-prefixes";
 
 //Components
 
-@import "mixins/buttons";
-@import "mixins/inputs";
-@import "mixins/navbars";
-@import "mixins/cards";
+@use "mixins/buttons";
+@use "mixins/inputs";
+@use "mixins/navbars";
+@use "mixins/cards";
