--- a/assets/css/gaia/mixins/_inputs.scss
+++ b/assets/css/gaia/mixins/_inputs.scss
@@ -1,3 +1,5 @@
+@use "transparency";
+
 @mixin input-size($padding-vertical, $padding-horizontal, $height){
     padding: $padding-vertical $padding-horizontal;
     height: $height;
@@ -5,7 +7,7 @@
 
 @mixin placeholder($color, $opacity){
    color: $color;
-   @include opacity(1);
+   @include transparency.opacity(1);
 }
 
 @mixin light-form(){
