--- a/assets/css/gaia/_example-pages.scss
+++ b/assets/css/gaia/_example-pages.scss
@@ -1,3 +1,4 @@
+@use "../jameshoward";
 
 
 /* HOME PAGE */
@@ -255,7 +256,7 @@
 
 /* BLOG POST PAGE */
 .media {
-    border-bottom: 1px solid $light-gray;
+    border-bottom: 1px solid jameshoward.$light-gray;
     padding: 30px 0;
 
     &:last-child{
@@ -428,14 +429,14 @@
         background: #242424;
     }
     .form-control{
-        color: $white-color;
+        color: jameshoward.$white-color;
 
         &:focus::-webkit-input-placeholder {
             color: rgba(#777777,.3);
         }
         &::-webkit-input-placeholder {
             -webkit-font-smoothing: antialiased;
-            color: $dark-gray;
+            color: jameshoward.$dark-gray;
         }
         &:focus{
 
@@ -448,7 +449,7 @@
         color: #c5a47e;
     }
     p{
-        color: $medium-gray;
+        color: jameshoward.$medium-gray;
     }
 }
 /* END SIGNUP PAGE */
