--- a/assets/css/gaia/_navbars.scss
+++ b/assets/css/gaia/_navbars.scss
@@ -1,3 +1,7 @@
+@use "../jameshoward";
+@use "mixins/navbars";
+@use "mixins/transparency";
+
 
 .nav {
     > li{
@@ -11,19 +15,19 @@
     }
 }
 .navbar{
-    border: $none;
-    font-size: $font-size-navbar;
+    border: jameshoward.$none;
+    font-size: jameshoward.$font-size-navbar;
 
     .navbar-brand {
-        margin: $navbar-margin-brand;
-        padding: $navbar-padding-brand;
-        font-size: $font-size-large + 2;
+        margin: jameshoward.$navbar-margin-brand;
+        padding: jameshoward.$navbar-padding-brand;
+        font-size: jameshoward.$font-size-large + 2;
         line-height: 22px;
     }
     .navbar-nav{
          > li > a {
-             padding: $navbar-padding-a;
-             margin: $navbar-margin-a;
+             padding: jameshoward.$navbar-padding-a;
+             margin: jameshoward.$navbar-margin-a;
              line-height: 18px;
          }
 
@@ -32,32 +36,32 @@
          }
          &.navbar-uppercase > li > a{
              text-transform: uppercase;
-             font-size: $font-size-base - 2;
+             font-size: jameshoward.$font-size-base - 2;
              letter-spacing: 0px;
-             font-weight: $font-weight-bold;
+             font-weight: jameshoward.$font-weight-bold;
              text-transform: uppercase;
              font-weight: 600;
          }
          > li > a.btn{
-             margin: $navbar-margin-a-btn;
-             padding: $padding-base-vertical $padding-base-horizontal;
+             margin: jameshoward.$navbar-margin-a-btn;
+             padding: jameshoward.$padding-base-vertical jameshoward.$padding-base-horizontal;
          }
          > li > a.btn-round{
-             margin: $navbar-margin-a-btn-round;
+             margin: jameshoward.$navbar-margin-a-btn-round;
          }
          > li > a [class^="fa"]{
-            font-size: $font-size-large;
+            font-size: jameshoward.$font-size-large;
             position: relative;
             top: 1px;
             margin-top: -3px;
         }
     }
     .btn{
-       margin: $navbar-margin-btn;
-       font-size: $font-size-base;
+       margin: jameshoward.$navbar-margin-btn;
+       font-size: jameshoward.$font-size-base;
     }
     .btn-simple{
-        font-size: $font-size-medium;
+        font-size: jameshoward.$font-size-medium;
     }
 
 
@@ -66,12 +70,12 @@
 
 
 .navbar-default {
-    background-color: $white-navbar;
+    background-color: jameshoward.$white-navbar;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
     .navbar-nav{
         > li > a:not(.btn){
-            color: $black-medium;
+            color: jameshoward.$black-medium;
         }
 
         > .active > a,
@@ -81,21 +85,21 @@
         > li > a:not(.btn):focus {
             background-color: transparent;
             border-radius: 3px;
-            color: $black-medium;
-            @include opacity(.85);
+            color: jameshoward.$black-medium;
+            @include transparency.opacity(.85);
         }
 
         > .dropdown > a:hover .caret,
         > .dropdown > a:focus .caret {
-            border-bottom-color: $black-color;
-            border-top-color: $black-color;
+            border-bottom-color: jameshoward.$black-color;
+            border-top-color: jameshoward.$black-color;
         }
 
         > .open > a,
         > .open > a:hover,
         > .open > a:focus{
             background-color: transparent;
-            color: $gold-color;
+            color: jameshoward.$gold-color;
         }
 
         .navbar-toggle:hover,.navbar-toggle:focus {
@@ -105,17 +109,17 @@
     }
 
     .navbar-brand{
-        color: $black-medium;
+        color: jameshoward.$black-medium;
     }
 
     &:not(.navbar-transparent) .btn-default:hover{
-        color: $gold-color;
-        border-color: $gold-color;
+        color: jameshoward.$gold-color;
+        border-color: jameshoward.$gold-color;
     }
     &:not(.navbar-transparent) .btn-neutral,
     &:not(.navbar-transparent) .btn-neutral:hover,
     &:not(.navbar-transparent) .btn-neutral:active{
-            color: $dark-gray;
+            color: jameshoward.$dark-gray;
         }
     .navbar-toggle:hover,
     .navbar-toggle:focus{
@@ -124,19 +128,19 @@
 }
 
 .navbar-ct-primary{
-    @include navbar-color($primary-navbar);
+    @include navbars.navbar-color(jameshoward.$primary-navbar);
 }
 .navbar-ct-blue{
-    @include navbar-color($blue-navbar);
+    @include navbars.navbar-color(jameshoward.$blue-navbar);
 }
 .navbar-ct-green{
-    @include navbar-color($green-navbar);
+    @include navbars.navbar-color(jameshoward.$green-navbar);
 }
 .navbar-ct-orange{
-    @include navbar-color($orange-navbar);
+    @include navbars.navbar-color(jameshoward.$orange-navbar);
 }
 .navbar-ct-red{
-    @include navbar-color($red-navbar);
+    @include navbars.navbar-color(jameshoward.$red-navbar);
 }
 
 .navbar-transparent{
@@ -148,10 +152,10 @@
 .navbar-toggle{
     margin-top: 19px;
     margin-bottom: 19px;
-    border: $none;
+    border: jameshoward.$none;
 
     .icon-bar {
-        background-color: $white-color;
+        background-color: jameshoward.$white-color;
     }
      .navbar-collapse,
      .navbar-form {
@@ -164,7 +168,7 @@
     }
 
     .navbar-transparent & .icon-bar{
-        background-color: $white-color;
+        background-color: jameshoward.$white-color;
     }
 }
 
@@ -178,22 +182,22 @@
     .navbar-transparent,
     [class*="navbar-ct"]{
         .navbar-brand{
-            color: $white-color;
-            @include opacity(1);
+            color: jameshoward.$white-color;
+            @include transparency.opacity(1);
 
             &:focus,
             &:hover{
                 background-color: transparent;
-                @include opacity(1);
-                color: $white-color;
+                @include transparency.opacity(1);
+                color: jameshoward.$white-color;
             }
         }
 
         .navbar-nav{
             > li > a:not(.btn){
-                color: $white-color;
-                border-color: $white-color;
-                @include opacity(.85);
+                color: jameshoward.$white-color;
+                border-color: jameshoward.$white-color;
+                @include transparency.opacity(.85);
             }
             > .active > a:not(.btn),
             > .active > a:hover:not(.btn),
@@ -202,8 +206,8 @@
             > li > a:focus:not(.btn){
                 background-color: transparent;
                 border-radius: 3px;
-                color: $white-color;
-                @include opacity(1);
+                color: jameshoward.$white-color;
+                @include transparency.opacity(1);
             }
             .nav > li > a.btn:hover{
                 background-color: transparent;
@@ -212,41 +216,41 @@
             > .dropdown > a .caret,
             > .dropdown > a:hover .caret,
             > .dropdown > a:focus .caret{
-                border-bottom-color: $white-color;
-                border-top-color: $white-color;
+                border-bottom-color: jameshoward.$white-color;
+                border-top-color: jameshoward.$white-color;
             }
 
             > .open > a,
             > .open > a:hover,
             > .open > a:focus {
                 background-color: transparent;
-                color: $white-color;
-                @include opacity(1);
+                color: jameshoward.$white-color;
+                @include transparency.opacity(1);
             }
         }
 
         .btn-default{
-            color: $white-color;
-            border-color: $white-color;
+            color: jameshoward.$white-color;
+            border-color: jameshoward.$white-color;
         }
         .btn-default.btn-fill{
-            color: $dark-gray;
-            background-color: $white-color;
-            @include opacity(1);
+            color: jameshoward.$dark-gray;
+            background-color: jameshoward.$white-color;
+            @include transparency.opacity(1);
         }
         .btn-default.btn-fill:hover,
         .btn-default.btn-fill:focus,
         .btn-default.btn-fill:active,
         .btn-default.btn-fill.active,
         .open .dropdown-toggle.btn-fill.btn-default{
-            border-color: $white-color;
-            @include opacity(1);
+            border-color: jameshoward.$white-color;
+            @include transparency.opacity(1);
         }
 
     }
     .navbar-transparent{
         .dropdown-menu .divider{
-            background-color: rgba($white-color,.2);
+            background-color: rgba(jameshoward.$white-color,.2);
         }
     }
 }
