--- a/assets/css/gaia/mixins/_buttons.scss
+++ b/assets/css/gaia/mixins/_buttons.scss
@@ -1,3 +1,6 @@
+@use "../../jameshoward";
+@use "transparency";
+
 // Mixin for generating new styles
 @mixin btn-styles($btn-color, $btn-states-color) {
   border-color: $btn-color;
@@ -8,7 +11,7 @@
   &:active,
   &.active,
   .open > &.dropdown-toggle {
-    background-color: $transparent-bg;
+    background-color: jameshoward.$transparent-bg;
     color: $btn-states-color;
     border-color: $btn-states-color;
   }
@@ -16,14 +19,14 @@
   &:disabled,
   &[disabled],
   &.disabled {
-    background-color: $transparent-bg;
+    background-color: jameshoward.$transparent-bg;
     border-color: $btn-color;
   }
 
   &.btn-fill {
-    color: $white-color;
+    color: jameshoward.$white-color;
     background-color: $btn-color;
-    @include opacity(1);  
+    @include transparency.opacity(1);  
 
     &:hover,
     &:focus,
@@ -31,11 +34,11 @@
     &.active,
     .open > &.dropdown-toggle{
         background-color: $btn-states-color;
-        color: $white-color;
+        color: jameshoward.$white-color;
     }
     
     .caret{
-        border-top-color: $white-color;
+        border-top-color: jameshoward.$white-color;
     }
   }
   
